# glasslab-metric-search

./: .gitignore  Dockerfile  README.md  STATUS_REPORT.md  pyproject.toml  pytest.ini  requirements-runtime.txt  requirements.txt  specification-v2.md
baselines/: clip_metrics.json  clip_report.md  dino_metrics.json  dino_report.md  random_metrics.json  random_report.md  random_shuffled_metrics.json  random_shuffled_report.md  resnet50_metrics.json  resnet50_report.md
benchmarks/: __init__.py  art_retrieval.py
configs/augmentations/: contrastive_cifar100.yaml
configs/datasets/: artbench_v1.yaml  cifar100_unseen_classes.yaml
configs/losses/: proxy_anchor.yaml
configs/schedulers/: cosine.yaml
configs/search_spaces/: art_metric_baseline.yaml  art_metric_candidate.yaml  art_metric_pair_v0.yaml  art_metric_proxy_v0.yaml  cifar100_contrastive_v0.yaml  cifar100_smoke_test.yaml  synthetic_smoke.yaml
docs/: cifar100-unseen-classes.md  evaluation-protocol.md  glasslab-integration.md  glasslab-run-fabric-followups-2026-04.md  glasslab-support-evaluation.md  gpu-job-template.md  metric-search-evaluation-action-notes-2026-04-29.md  run-spec.md  search-space-v0.md  statistical-validation.md
notebooks/: results_analysis.ipynb
program/: proposer_prompt.md  reviewer_prompt.md
scripts/: __init__.py  debug_baseline.py  download-cifar.py  evaluate.py  inspect_run_metrics.py  mutate_config.py  run_baseline.py  run_experiment.py  run_pipeline.py  train.py
search/: __init__.py  mutation_ops.py  run_spec.py  selection.py  validation.py
src/: __init__.py  config.py
src/data/: __init__.py  augment.py  cifar100.py  dataset.py
src/data/resolver/: __init__.py
src/data/synthetic/: __init__.py  synthetic.py
src/evaluation/: __init__.py  baselines.py  embeddings.py  reports.py
src/evaluators/: registry.py
src/hpo/: __init__.py  hpo.py
src/losses/: __init__.py  factory.py  losses.py  registry.py
src/metrics/: cifar_contrastive.py  metrics.py  schema.py
src/miners/: __init__.py  registry.py
src/models/: __init__.py  backbone.py  l2anc.py  registry.py
src/regularizers/: __init__.py  registry.py
src/runners/: cifar_contrastive.py  experiment.py  trainer.py
tests/: __init__.py  test_e2e_smoke.py  test_metrics_schema.py  test_smoke_config.py  test_smoke_dataloaders.py  test_smoke_losses.py  test_smoke_metrics.py  test_smoke_run_experiment.py
