[project]
name = "glasslab-metric-search"
version = "0.2.0"
description = "Contrastive representation learning for unseen class generalization on Glasslab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "timm>=1.0.0",
  "pytorch-metric-learning==2.9.0",
  "faiss-cpu>=1.8.0",
  "umap-learn>=0.5.0",
  "scikit-learn>=1.3.0",
  "optuna>=4.8.0",
  "mlxtend>=0.24.0",
  "torchcp>=1.2.0",
  "syne-tune>=0.15.0",
  "ray[tune]>=2.55.0",
  "pandas>=2.0.0",
  "tqdm>=4.65.0",
  "matplotlib>=3.10.8",
  "seaborn>=0.12.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
core = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "tqdm>=4.65.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["search*", "src*", "benchmarks*", "scripts*"]

[tool.setuptools.package-data]
src = ["py.typed"]
